# yapb

./: .drone.jsonnet  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  ldscript.lds  meson.build  meson_options.txt  package.py  version_script.lds  счета в оплату.xlsx
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml
cfg/addons/yapb/conf/: avatars.cfg  chatter.cfg  custom.cfg  difficulty.cfg  logos.cfg  weapon.cfg  yapb.cfg
cfg/addons/yapb/conf/lang/: chs_chat.cfg  chs_lang.cfg  cht_chat.cfg  cht_lang.cfg  de_chat.cfg  de_lang.cfg  en_chat.cfg  en_names.cfg  ru_chat.cfg  ru_lang.cfg  ru_names.cfg
ext/crlib/: cr-alloc.h  cr-array.h  cr-basic.h  cr-binheap.h  cr-color.h  cr-complete.h  cr-deque.h  cr-detour.h  cr-dict.h  cr-files.h  cr-hashmap.h  cr-hook.h  cr-http.h  cr-lambda.h  cr-library.h  cr-logger.h  cr-math.h  cr-memory.h  cr-movable.h  cr-override.h  cr-platform.h  cr-random.h  cr-string.h  cr-twin.h  cr-ulz.h  cr-uniqueptr.h  cr-vector.h
ext/hlsdk/: const.h  eiface.h  extdll.h  meta_api.h  metamod.h  model.h  physint.h  progdefs.h  util.h
inc/: analyze.h  chatlib.h  config.h  constant.h  constants.h  control.h  engine.h  fakeping.h  graph.h  hooks.h  manager.h  message.h  module.h  planner.h  practice.h  product.h  sounds.h  storage.h  support.h  version.h  version.h.in  vision.h  vistable.h  yapb.h
include/: compress.h  config.h  control.h  core.h  corelib.h  engine.h  gamestate.h  globals.h  graph.h  manager.h  message.h  platform.h  resource.h  utils.h  yapb.h
include/crlib/: cr-alloc.h  cr-array.h  cr-basic.h  cr-binheap.h  cr-color.h  cr-complete.h  cr-dict.h  cr-files.h  cr-hook.h  cr-http.h  cr-lambda.h  cr-library.h  cr-logger.h  cr-math.h  cr-movable.h  cr-platform.h  cr-random.h  cr-string.h  cr-twin.h  cr-ulz.h  cr-uniqueptr.h  cr-vector.h
include/engine/: archtypes.h  const.h  dllapi.h  eiface.h  enginecallback.h  extdll.h  meta_api.h  metamod.h  model.h  mutil.h  plinfo.h  progdefs.h  sdk_util.h  util.h
project/: Performance1.psess  makefile  yapb.rc  yapb.sln  yapb.vcxproj  yapb.vcxproj.filters
project/debug/: inf.idb
source/: Android.mk  android.cpp  basecode.cpp  botmanager.cpp  chatlib.cpp  combat.cpp  control.cpp  engine.cpp  gamestate.cpp  globals.cpp  graph.cpp  interface.cpp  linkage.cpp  manager.cpp  message.cpp  navigate.cpp  netmsg.cpp  support.cpp  waypoint.cpp
src/: analyze.cpp  android.cpp  botlib.cpp  chatlib.cpp  combat.cpp  config.cpp  control.cpp  engine.cpp  entities.cpp  fakeping.cpp  graph.cpp  hooks.cpp  linkage.cpp  manager.cpp  message.cpp  module.cpp  navigate.cpp  planner.cpp  practice.cpp  sounds.cpp  storage.cpp  support.cpp  tasks.cpp  vision.cpp  vistable.cpp
vc/: yapb.rc  yapb.sln  yapb.vcxproj  yapb.vcxproj.filters
