#
# YaPB - Counter-Strike Bot based on PODBot by Markus Klinge.
# Copyright © 2004-2023 YaPB Project <yapb@jeefo.net>.
#
# SPDX-License-Identifier: MIT
#

option('64bit', type : 'boolean', value : false,
       description: 'Enables bot build with as 64-bit binary.')
	   
option('native', type : 'boolean', value : false,
       description: 'Configure compiler for a native machine build.')