#
# YaPB - Counter-Strike Bot based on PODBot by Markus Klinge.
# Copyright © YaPB Project Developers <yapb@jeefo.net>.
#
# SPDX-License-Identifier: MIT
#

option('64bit', type : 'boolean', value : false,
       description: 'Enables bot build with as 64-bit binary.')
	   
option('native', type : 'boolean', value : false,
       description: 'Configure compiler for a native machine build.')
	   
option('winxp', type : 'boolean', value : false,
       description: 'Configure MSVC build to output Windows XP compatible binary.')
